# agents-ctx-plus

./: .gitignore  AGENTS.md  README.md  _aether_agents_link  _aether_schema_link
zenith/: .gitignore  Cargo.toml  install.sh
zenith/crates/zen-auth/: Cargo.toml
zenith/crates/zen-auth/src/: api_key.rs  browser_flow.rs  claims.rs  error.rs  jwks.rs  lib.rs  org.rs  refresh.rs  token_store.rs
zenith/crates/zen-auth/tests/: live_auth.rs
zenith/crates/zen-cli/: Cargo.toml
zenith/crates/zen-cli/src/: bootstrap.rs  main.rs  pipeline.rs  progress.rs  spike_agentfs.rs  spike_clap.rs  ui.rs  write_lock.rs
zenith/crates/zen-cli/src/cli/: global.rs  mod.rs  root_commands.rs
zenith/crates/zen-cli/src/commands/: audit.rs  cache.rs  compat.rs  dispatch.rs  finding.rs  grep.rs  hook.rs  hypothesis.rs  index.rs  init.rs  insight.rs  install.rs  issue.rs  link.rs  log.rs  mod.rs  onboard.rs  prd.rs  rebuild.rs  research.rs  schema.rs  search.rs  session.rs  study.rs  task.rs  whats_next.rs  wrap_up.rs
zenith/crates/zen-cli/src/context/: app_context.rs  catalog_cache.rs  config_warnings.rs  mod.rs  project_root.rs
zenith/crates/zen-cli/src/output/: mod.rs  table.rs
zenith/crates/zen-cli/src/workspace/: agentfs.rs  mod.rs
zenith/crates/zen-config/: Cargo.toml
zenith/crates/zen-config/src/: axiom.rs  clerk.rs  error.rs  general.rs  lib.rs  motherduck.rs  r2.rs  turso.rs
zenith/crates/zen-config/tests/: dotenv_integration.rs  env_overrides.rs  toml_loading.rs
zenith/crates/zen-core/: Cargo.toml
zenith/crates/zen-core/src/: arrow_serde.rs  audit_detail.rs  enums.rs  errors.rs  identity.rs  ids.rs  lib.rs  responses.rs  trail.rs  workspace.rs
zenith/crates/zen-core/src/entities/: audit.rs  compat.rs  finding.rs  hypothesis.rs  impl_log.rs  insight.rs  issue.rs  link.rs  mod.rs  project.rs  research.rs  session.rs  study.rs  task.rs
zenith/crates/zen-core/tests/: entity_roundtrip.rs
zenith/crates/zen-db/: Cargo.toml
zenith/crates/zen-db/migrations/: 001_initial.sql  002_catalog.sql  003_team.sql  004_catalog_locator_format.sql
zenith/crates/zen-db/src/: error.rs  helpers.rs  lib.rs  migrations.rs  retry.rs  service.rs  spike_catalog_visibility.rs  spike_clerk_auth.rs  spike_decision_traces.rs  spike_jsonl.rs  spike_libsql.rs  spike_libsql_sync.rs  spike_studies.rs  test_support.rs
zenith/crates/zen-db/src/repos/: audit.rs  catalog.rs  compat.rs  finding.rs  hypothesis.rs  impl_log.rs  insight.rs  issue.rs  link.rs  mod.rs  project.rs  research.rs  session.rs  study.rs  task.rs  whats_next.rs
zenith/crates/zen-db/src/trail/: mod.rs  replayer.rs  writer.rs
zenith/crates/zen-db/src/updates/: compat.rs  finding.rs  hypothesis.rs  insight.rs  issue.rs  mod.rs  research.rs  study.rs  task.rs
zenith/crates/zen-db/tests/: pr1_infrastructure.rs  pr1_phase9_identity.rs  spike_decision_e2e.rs
zenith/crates/zen-embeddings/: Cargo.toml
zenith/crates/zen-embeddings/src/: error.rs  lib.rs  spike_fastembed.rs
zenith/crates/zen-hooks/: Cargo.toml
zenith/crates/zen-hooks/src/: checkout.rs  error.rs  installer.rs  lib.rs  merge.rs  repo.rs  scripts.rs  session_tags.rs  spike_git_hooks.rs  validator.rs
zenith/crates/zen-lake/: Cargo.toml
zenith/crates/zen-lake/src/: cloud_search.rs  error.rs  lib.rs  r2_write.rs  schemas.rs  source_files.rs  spike_duckdb.rs  spike_duckdb_vss.rs  spike_native_lance.rs  spike_r2_parquet.rs  store.rs
zenith/crates/zen-parser/: Cargo.toml  TYPES_REFACTOR_PLAN.md
zenith/crates/zen-parser/src/: doc_chunker.rs  error.rs  lib.rs  parser.rs  spike_ast_grep.rs  test_files.rs  types.rs
zenith/crates/zen-parser/src/extractors/: bash.rs  c.rs  cpp.rs  css.rs  elixir.rs  go.rs  helpers.rs  html.rs  javascript.rs  mod.rs  python.rs  rust.rs  tsx.rs  typescript.rs
zenith/crates/zen-parser/src/parser/: markdown_lang.rs  rst_lang.rs  svelte_lang.rs  toml_lang.rs
zenith/crates/zen-parser/src/types/: doc_sections.rs  mod.rs  parsed_item.rs  symbol_kind.rs  visibility.rs
zenith/crates/zen-parser/tests/fixtures/: conformance.toml  dependencies.toml  edge.toml  malformed.md  module-info.java  sample.c  sample.cpp  sample.cs  sample.css  sample.ex  sample.go  sample.hs  sample.html  sample.java  sample.js  sample.json  sample.lua  sample.md  sample.php  sample.py  sample.rb  sample.rs  sample.rst  sample.sh  sample.svelte  sample.toml  sample.ts  sample.tsx  (+2 more)
zenith/crates/zen-registry/: Cargo.toml
zenith/crates/zen-registry/src/: crates_io.rs  csharp.rs  error.rs  go.rs  haskell.rs  hex.rs  http.rs  java.rs  lib.rs  lua.rs  npm.rs  php.rs  pypi.rs  ruby.rs
zenith/crates/zen-schema/: Cargo.toml
zenith/crates/zen-schema/src/: error.rs  lib.rs  registry.rs  spike_schema_gen.rs  spike_trail_versioning.rs
zenith/crates/zen-search/: Cargo.toml
zenith/crates/zen-search/src/: error.rs  fts.rs  graph.rs  grep.rs  hybrid.rs  lib.rs  recursive.rs  ref_graph.rs  spike_graph_algorithms.rs  spike_grep.rs  spike_recursive_query.rs  vector.rs  walk.rs
zenith/crates/zen-secrets/: Cargo.toml
zenith/crates/zen-secrets/src/: lib.rs
zenith/docs/operations/: infisical-secrets.md
zenith/docs/schema/: 01-turso-data-model.md  02-data-architecture.md  02-ducklake-data-model.md  03-architecture-overview.md  04-cli-api-design.md  05-crate-designs.md  06-prd-workflow.md  07-implementation-plan.md  08-studies-spike-plan.md  09-studies-workflow.md  10-git-jsonl-strategy.md  11-git-hooks-spike-plan.md  12-schema-spike-plan.md  13-zen-grep-design.md  14-trail-versioning-spike-plan.md  15-clerk-auth-turso-jwks-spike-plan.md  16-r2-parquet-export-spike-plan.md  17-native-lance-spike-plan.md  18-catalog-visibility-spike-plan.md  19-phase1-foundation-plan.md  20-phase2-storage-layer-plan.md  21-rlm-recursive-query-spike-plan.md  22-decision-graph-rustworkx-spike-plan.md  23-phase3-parsing-indexing-plan.md  24-phase4-search-registry-plan.md  25-phase5-cli-shell-plan.md  26-phase6-prd-workflow-plan.md  27-phase7-agentfs-integration-plan.md  28-phase8-authentication-identity-plan.md  29-phase9-visibility-teams-plan.md  INDEX.md
zenith/examples/: bash_spike.rs
(+901 files in other folders)
