[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
duckdb = { version = "1.4", features = ["bundled"] }
libsql = "0.9.29"
# NOTE: turso crate (Limbo-based) planned for future switch once FTS is stable.
# turso = "0.5.0-pre.8"

# Workspace isolation — AgentFS SDK from crates.io (spike 0.7)
agentfs-sdk = "0.6"

# Embeddings
fastembed = "5.8"

# Parsing (ast-grep wraps tree-sitter with pattern matching + composable matchers)
ast-grep-core = "0.40"
ast-grep-language = "0.40"
tree-sitter = "0.26"
tree-sitter-md = "0.5.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-rst = "0.2.0"

# HTTP
reqwest = { version = "0.13", features = ["json"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
figment = { version = "0.10", features = ["toml", "env", "test"] }

# Object storage
object_store = { version = "0.12", features = ["aws"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Env
dotenvy = "0.15"
dirs = "6.0"

# Testing
pretty_assertions = "1.4"
tempfile = "3.20"
rstest = "0.26"

# JSONL (spike 0.12 — evaluating for production use)
serde-jsonlines = "0.7"

# Git integration (spike 0.13 — pure Rust git via gix)
gix = { version = "0.70", default-features = false, features = [
    "max-performance-safe",
    "index",
    "blob-diff",
] }

# JSON Schema validation (spike 0.13 — JSONL trail schema enforcement)
jsonschema = "0.28"

# JSON Schema generation from Rust types (spike 0.14 — schemars + jsonschema full integration)
schemars = { version = "1", features = ["chrono04"] }

# Graph algorithms (spike 0.22 — decision graph analytics)
rustworkx-core = "0.17"

# Grep (ripgrep library — spike 0.14 zen grep feature)
grep = "0.4"
ignore = "0.4"

# Auth (spike 0.17 — Clerk CLI auth + Turso JWKS)
clerk-rs = "0.4.2"
open = "5"
tiny_http = "0.12"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
base64 = "0.22"

# Lance (spike 0.19 — native lancedb writes to R2)
lancedb = { version = "0.26", features = ["aws"] }
arrow-array = "57"
arrow-schema = "57"
arrow-ipc = "57"

# Arrow serialization (Rust structs ↔ Arrow RecordBatch, production bridge)
serde_arrow = { version = "0.13", features = ["arrow-57"] }

# Internal crates
zen-core = { path = "crates/zen-core" }
zen-config = { path = "crates/zen-config" }
zen-db = { path = "crates/zen-db" }
zen-lake = { path = "crates/zen-lake" }
zen-parser = { path = "crates/zen-parser" }
zen-embeddings = { path = "crates/zen-embeddings" }
zen-registry = { path = "crates/zen-registry" }
zen-search = { path = "crates/zen-search" }
zen-hooks = { path = "crates/zen-hooks" }
zen-schema = { path = "crates/zen-schema" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
