[package]
name = "zen-auth"
description = "Clerk authentication, JWKS validation, and token management for Zenith"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zen-core.workspace = true
clerk-rs.workspace = true
tiny_http.workspace = true
open.workspace = true
keyring.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
urlencoding.workspace = true
dirs.workspace = true
getrandom.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
dotenvy.workspace = true
figment.workspace = true

[lints]
workspace = true
