[package]
name = "zen-cli"
description = "Zenith CLI binary — developer toolbox for LLM-driven project knowledge management"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "znt"
path = "src/main.rs"

[dependencies]
zen-auth.workspace = true
zen-core.workspace = true
zen-config.workspace = true
zen-secrets.workspace = true
zen-db.workspace = true
zen-lake.workspace = true
zen-parser.workspace = true
zen-embeddings.workspace = true
zen-registry.workspace = true
zen-search.workspace = true
zen-hooks.workspace = true
zen-schema.workspace = true
clap.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
agentfs-sdk.workspace = true
chrono.workspace = true
dirs.workspace = true
tempfile.workspace = true
duckdb.workspace = true
libsql.workspace = true
toml.workspace = true
semver.workspace = true
reqwest.workspace = true
flate2 = "1"
tar = "0.4"
futures = "0.3"
rayon = "1"

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
