[package]
name = "zen-config"
description = "Layered configuration loading for Zenith"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zen-core.workspace = true
figment.workspace = true
serde.workspace = true
dirs.workspace = true
dotenvy.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
