[package]
name = "zen-core"
description = "Core types, ID generation, and error types for Zenith"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
schemars.workspace = true
anyhow.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
jsonschema.workspace = true

[lints]
workspace = true
