[package]
name = "zen-db"
description = "libSQL database operations for Zenith state management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zen-core.workspace = true
zen-config.workspace = true
libsql.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
rstest.workspace = true
dotenvy.workspace = true

[lints]
workspace = true
