[package]
name = "zen-db"
description = "libSQL database operations for Zenith state management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zen-core.workspace = true
zen-config.workspace = true
zen-schema.workspace = true
libsql.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-jsonlines.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
rstest.workspace = true
rustworkx-core.workspace = true
dotenvy.workspace = true
serde-jsonlines.workspace = true
reqwest.workspace = true
clerk-rs.workspace = true
open.workspace = true
tiny_http.workspace = true
keyring.workspace = true
base64.workspace = true
# Spike 0.20: catalog → lance search E2E
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
serde_arrow.workspace = true
duckdb.workspace = true

[lints]
workspace = true
