[package]
name = "zen-lake"
description = "DuckDB local cache + Lance/R2 storage for Zenith documentation lake"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zen-core.workspace = true
zen-config.workspace = true
zen-embeddings.workspace = true
duckdb.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
libsql.workspace = true
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
serde_arrow.workspace = true
futures-util = "0.3"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
rstest.workspace = true
dotenvy.workspace = true
arrow-ipc.workspace = true
serde.workspace = true
chrono.workspace = true
zen-core.workspace = true
tokio.workspace = true

[lints]
workspace = true
