[package]
name = "zen-parser"
description = "ast-grep-based source code parsing and API extraction for Zenith"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zen-core.workspace = true
ast-grep-core.workspace = true
ast-grep-language.workspace = true
tree-sitter-md.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
tree-sitter.workspace = true

[lints]
workspace = true
