[package]
name = "zen-registry"
description = "Package registry HTTP clients for Zenith"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zen-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding.workspace = true

[dev-dependencies]
http = "1"
pretty_assertions.workspace = true

[lints]
workspace = true
