[package]
name = "zen-schema"
description = "JSON Schema generation, validation, and registry for Zenith (schemars + jsonschema)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zen-core.workspace = true
schemars.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
chrono.workspace = true
tempfile.workspace = true
serde-jsonlines.workspace = true

[lints]
workspace = true
