[package]
name = "zen-search"
description = "Search orchestration for Zenith (vector + FTS)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zen-core.workspace = true
zen-db.workspace = true
zen-lake.workspace = true
zen-embeddings.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true

[lints]
workspace = true
