[package]
name = "zen-search"
description = "Search orchestration for Zenith (vector + FTS + grep)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
 zen-core.workspace = true
 zen-db.workspace = true
 zen-lake.workspace = true
 zen-embeddings.workspace = true
 zen-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

# Grep feature — local project search (ripgrep library)
grep.workspace = true
ignore.workspace = true
duckdb.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
tempfile.workspace = true
ast-grep-core.workspace = true
ast-grep-language.workspace = true
tree-sitter.workspace = true
rustworkx-core.workspace = true

[lints]
workspace = true
